# woogent-hackillinois-2026

./: .gitignore  CLAUDE.md  LICENSE  README.md  STORY.md  docker-compose.yml  pyproject.toml  woogent-ucp.postman_collection.json
.claude/: settings.local.json
.github/workflows/: deploy.yml  refresh-products.yml
api/: Dockerfile  config.py  main.py
api/db/: connection.py  woo_queries.py
api/models/: ucp.py
api/routes/: checkout.py  demo.py  dependencies.py  oauth.py  orders.py  products.py  well_known.py
api/services/: auth.py  session_store.py  stripe_service.py  ucp_adapter.py
api/tests/: test_smoke.py
demo/: Dockerfile  app.py
wordpress/: prod.sh  seed.sql  setup.sh
wordpress/theme-overrides/: footer.php
